<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/Bback"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickBack"
        android:text="@string/Bback"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/EMemail"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/email"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EDemail"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EDemail"
        android:layout_width="215sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/EMemail"
        app:layout_constraintTop_toBottomOf="@+id/tvViewMembers" />

    <TextView
        android:id="@+id/tvViewMembers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:paddingBottom="8sp"
        android:paddingEnd="8sp"
        android:paddingStart="8sp"
        android:paddingTop="8sp"
        android:text="@string/edit_member"
        android:textColor="#ffffff"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/TVfirstnames"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/first_name"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EDfirstname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EDfirstname"
        android:layout_width="215sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:textSize="14sp"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVfirstnames"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <TextView
        android:id="@+id/TVlastname"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/last_name"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EDlastname"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EDlastname"
        android:layout_width="215sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVlastname"
        app:layout_constraintTop_toBottomOf="@+id/EDfirstname" />

    <TextView
        android:id="@+id/TVpostcode"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/post_code"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EDpc"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EDpc"
        android:layout_width="215sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:textSize="14sp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVpostcode"
        app:layout_constraintTop_toBottomOf="@+id/EDlastname" />

    <TextView
        android:id="@+id/TVhousenmum"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/house_number"
        android:textSize="14sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/EDnumber"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EDnumber"
        android:layout_width="215sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textSize="14sp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVhousenmum"
        app:layout_constraintTop_toBottomOf="@+id/EDpc" />

    <Button
        android:id="@+id/button"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:onClick="onClickAddMember"
        android:text="@string/update_member"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/Bback"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TVmember"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/member"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EDnumber" />

    <CheckBox
        android:id="@+id/EDCB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/Tick"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/TVmember"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVmember" />

    <Button
        android:id="@+id/button2"
        android:textAllCaps="false"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/find_member"
        app:layout_constraintEnd_toEndOf="@+id/tvViewMembers"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EDemail" />

</android.support.constraint.ConstraintLayout>