<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.adamg.tourofbritain.MainActivity">

    <TextView
        android:id="@+id/NUusername"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tvUsername"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ETusername"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/TVpassword"
        android:layout_width="125sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/tvPassword"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/ETpassword"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/ETusername"
        android:layout_width="wrap_content"
        android:layout_height="46dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/NUusername"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ETpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/TVpassword"
        app:layout_constraintTop_toBottomOf="@+id/ETusername" />

    <Button
        android:id="@+id/Blogin"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickLogin"
        android:text="@string/bLogin"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ETpassword" />

    <Button
        android:id="@+id/Bnewuser"
        android:layout_width="150sp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onClickNewUser"
        android:text="@string/bNewuser"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Blogin" />

</android.support.constraint.ConstraintLayout>
